# goat-planner

./: .gitignore  README.md  component.puml  json_test.ipynb  pyproject.toml  requirements.txt  ros2_integration.puml
backend/: app.py  behavior_tree.py  conversations.json
behaviors/: behavior_tree_test.py  main.py  sample.xml  test.py  test.xml  tree_nodes_model.xml
behaviors/actions/: say_something.py
behaviors/goat_behavior_tree/: CMakeLists.txt  package.xml  setup.py
behaviors/goat_behavior_tree/config/: sample_tree.xml  simple_goal.xml
behaviors/goat_behavior_tree/goat_behavior_tree/: action_servers.py
behaviors/goat_behavior_tree/include/goat_behavior_tree/: action_nodes.hpp
behaviors/goat_behavior_tree/launch/: goat_bt.launch.py
behaviors/goat_behavior_tree/scripts/: action_servers.py  assist_server.py  base_action_server.py  execute_server.py  locate_server.py  navigate_server.py  pick_server.py  place_server.py  shepherd_server.py  wait_server.py
behaviors/goat_behavior_tree/src/: action_nodes.cpp  main.cpp
behaviors/goat_behavior_tree/srv/: ExecuteCommand.srv  LocateObject.srv  NavigateTo.srv  Pick.srv  Place.srv  RequestAssistance.srv  Wait.srv
behaviors/goat_behavior_tree/test/: test_navigate.py
data/: actions.json  behavior_tree_dataset.json  blip_objects_datasets.json  conversations.json  objects.json  queries_dataset.json  robot_base_actions.json  robot_optional_actions.json  task_dataset.json  templates.json
doc/: pipeline.puml
docs/: class.puml  pipeline.puml
frontend/: package-lock.json  package.json
frontend/src/components/: BehaviorTree.tsx  ChatBox.tsx
generation/: cap_gen_bb.ipynb  captions.json  coco_download.py  dataset_gen.ipynb  queries_dataset.json  synthetic_robot_action_dataset.json
legacy/: bt_dataset_exploration.ipynb  lora_bt_training copy.ipynb  prefix_bt_training.ipynb  test_chat_1b.ipynb
models/: llama_hf.py
speach/: ouetts.ipynb  simple_tts.ipynb
src/goat_planner/: behavior_tree.py  cli_chat.py  config.py  goat_controller.py  goat_state.py
src/goat_planner/data_handling/: caption_generation.py  coco_dataset_downloader.py
src/goat_planner/flask_server/: conversations.json  main.py
src/goat_planner/frontend/: package.json
src/goat_planner/frontend/src/: App.tsx  index.css  socket.ts
src/goat_planner/frontend/src/components/: BehaviorTree.tsx  ChatBox.tsx  WorldState.tsx
src/goat_planner/frontend/src/pages/: HomePage.tsx
src/goat_planner/goat_beavior/: CMakeLists.txt  package.xml
src/goat_planner/goat_beavior/action/: Pick.action
src/goat_planner/goat_beavior/behavior_trees/: main_tree.xml
src/goat_planner/goat_beavior/include/goat_behavior/: service_actions.hpp  service_node_base.hpp  wait_action.hpp
src/goat_planner/goat_beavior/launch/: services_launch.py
src/goat_planner/goat_beavior/scripts/: goat_state_bridge.py  navigate_service.py  pick_service.py  place_service.py  shepherd_connector.py
src/goat_planner/goat_beavior/src/: behavior_manager.cpp
src/goat_planner/goat_beavior/srv/: Navigate.srv  Place.srv
src/goat_planner/models/: speech_to_text.py  text_to_speech.py
src/goat_planner/ros2_interface/: world_state_node.py
src/goat_planner/utils/: bt_validator.py  json_xml_convertor.py  view_objects.py
training/: bt_dataset.json  dataset_generation.ipynb  evaluate_models.py  evaluation.py  evaluation_notebook.ipynb  ia3_bt_training copy.ipynb  ia3_bt_training.ipynb  lora_bt_training copy.ipynb  lora_bt_training.ipynb  prompt_data.py  test.ipynb  train_health.ipynb  train_test.ipynb  training.ipynb
